--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "orchestra/parser": "4.0",
+        "socialiteproviders/vkontakte": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
