--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.9",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
         "laravelcollective/html": "^6.0",
         "orchestra/parser": "4.0",
-        "socialiteproviders/vkontakte": "^4.0"
+        "predis/predis": "^1.1",
+        "socialiteproviders/vkontakte": "^4.0",
+        "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
